# exchange-connectors-rs

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: binance.yml  bitfinex.yml  bitmex.yml  ci_checks.yml  okex.yml
benches/: websocket_benchmark.rs
binance/: Cargo.toml
binance-rs/: Cargo.toml
binance-rs/examples/: binance_futures_websockets.rs
binance-rs/src/: model.rs
binance-rs/src/futures/: model.rs  websockets.rs
binance/benches/: websocket_benchmark.rs
binance/examples/: binance_endpoints.rs  binance_futures_endpoints.rs  binance_futures_userstream.rs  binance_futures_websockets.rs  binance_save_all_trades.rs  binance_websockets.rs  binance_ws_loop.rs
binance/src/: lib.rs
binance/src/commons/: config.rs  errors.rs  util.rs
binance/src/interfaces/: usdm.rs  usdm_data.rs
binance/src/rest/: api.rs  client.rs  mod.rs  model.rs  savings.rs
binance/src/rest/futures/: account.rs  general.rs  market.rs  model.rs
binance/src/rest/spot/: account.rs  general.rs  market.rs
binance/src/websocket/futures/: mod.rs  usdm.rs  usdm_data.rs  userstream.rs
binance/src/websocket/spot/: mod.rs  userstream.rs
binance/tests/: account_tests.rs  futures_account_tests.rs  futures_general_tests.rs  futures_market_test.rs  general_tests.rs  market_tests.rs  util_tests.rs
binance/tests/mocks/futures/general/: exchange_info.json
bitfinex/: Cargo.toml
bitfinex/examples/: authenticated_channels.rs  derivs_ws_loop.rs  private_endpoints.rs  public_channels.rs  public_endpoints.rs
bitfinex/src/: lib.rs
bitfinex/src/commons/: auth.rs  currency.rs  errors.rs  mod.rs  pairs.rs  precision.rs
bitfinex/src/interfaces/: derivs.rs  mod.rs
bitfinex/src/rest/: account.rs  api.rs  book.rs  candles.rs  client.rs  derivs.rs  funding.rs  ledger.rs  mod.rs  orders.rs  ticker.rs  trades.rs
bitfinex/src/websocket/: derivs_ws.rs  derivs_ws_data.rs  events.rs  mod.rs  model.rs  websockets.rs
bitmex/: Cargo.toml
bitmex/src/: exchange_interface.rs  lib.rs
bitmex/src/rest/: api_request.rs  mod.rs
bitmex/src/utils/: auth.rs  enums.rs  mod.rs  thread_pool.rs
bitmex/src/utils/data/: execution.rs  instrument.rs  mod.rs  order.rs  order_book_l2.rs  position.rs  trade_bucketed.rs  user_margin.rs
bitmex/src/websocket/: mod.rs
examples/: binance_endpoints.rs  binance_futures_endpoints.rs  binance_futures_userstream.rs  binance_futures_websockets.rs  binance_save_all_trades.rs  binance_usdm_interface.rs  binance_websockets.rs  run_ws.rs
okex/: Cargo.toml
okex/examples/: okx_rest_endpoints.rs
okex/src/: lib.rs
okex/src/commons/: auth.rs  client.rs  config.rs  errors.rs  mod.rs  utils.rs
okex/src/rest/: account.rs  api.rs  market_data.rs  mod.rs  public_data.rs  status.rs  trade.rs  trading_data.rs
okex/tests/: account_test.rs  market_data_tests.rs  public_data_test.rs  status_test.rs  trade_test.rs  trading_data_test.rs
okex/tests/mocks/account/: get_acc_position_risk.json  get_balance.json  get_bills_details.json  get_fee_rates.json  get_leverage.json  get_positions.json  set_leverage.json  set_position_mode.json
okex/tests/mocks/market_data/: get_candles.json  get_index_candles.json  get_index_tickers.json  get_ticker.json  get_tickers.json  get_trades.json
okex/tests/mocks/public_data/: get_delivery.json  get_discount_rate.json  get_estimated_delivery_price.json  get_funding_rate.json  get_funding_rate_history.json  get_instruments.json  get_insurance_fund.json  get_interest_rate.json  get_limit_price.json  get_liquidation_orders.json  get_mark_price.json  get_open_interest.json  get_option_market_data.json  get_option_trades.json  get_position_tiers.json  get_system_time.json  get_underlying.json  unit_convert.json
okex/tests/mocks/status/: get_system_status.json
okex/tests/mocks/trade/: amend_order.json  cancel_order.json  close_position.json  get_fills_history.json  get_order_details.json  get_order_history.json  get_order_list.json  place_order.json
okex/tests/mocks/trading_data/: get_contracts_oi_volume.json  get_long_short_ratio.json  get_margin_lending_ratio.json  get_options_oi_volume.json  get_put_call_ratio.json
src/: api.rs  client.rs  config.rs  interface_usdm.rs  interface_usdm_data.rs  interface_usdt_futures_.rs  lib.rs  ws.rs  ws_fut_data.rs  ws_usdm.rs  ws_usdm_data.rs  ws_usdt_futures.rs  ws_usdt_futures_data.rs
src/commons/: mod.rs  util.rs
src/futures/: account.rs  interface_usdm.rs  mod.rs  model.rs  ws_usdm_data.rs
src/interfaces/: mod.rs  usdm.rs  usdm_data.rs
src/rest/: api.rs  client.rs  mod.rs  model.rs  savings.rs
src/rest/futures/: account.rs  market.rs  model.rs
src/rest/spot/: account.rs  market.rs  mod.rs
src/websocket/futures/: mod.rs  usdm.rs  usdm_data.rs
src/websocket/spot/: mod.rs  userstream.rs
tests/: account_tests.rs  futures_account_tests.rs  futures_market_test.rs  general_tests.rs  interface_usdm_tests.rs  market_tests.rs  util_tests.rs  ws_tests.rs
tests/mocks/futures/account/: order_status.json
