[package]
name = "binance-connector-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { path = "binance-rs" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.88"
log = "0.4.17"
rust_decimal = "1.26.1"
rust_decimal_macros = "1.26.1"
indexmap = "1.9.2"
dotenv = "0.15.0"
