[package]
name = "binance"
version = "0.1.0"
edition = "2021"

[lib]
name = "binance"
path = "src/lib.rs"

[dependencies]
hex = "0.4"
hmac = "0.12.1"
sha2 = "0.10.6"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tungstenite = { version = "0.26.1", features = ["native-tls"] }
url = "2.2.2"
dotenv = "0.15.0"
log = "0.4.17"
indexmap = "2.7.0"

[features]
vendored-tls = ["reqwest/native-tls-vendored", "tungstenite/native-tls-vendored"]

[dev-dependencies]
csv ="1.1.6"
mockito = "1.6.1"
env_logger = "0.11.6"
criterion = "0.5.1"
float-cmp = "0.10.0"
serde_json = "1.0"

[[bench]]
name = "websocket_benchmark"
harness = false
