[package]
name = "bitfinex"
version = "0.0.1"
edition = "2021"

[lib]
name = "bitfinex"
path = "src/lib.rs"

[dependencies]
hex = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
error-chain = "0.12"
ring = "0.16"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
tungstenite = { version = "0.18.0", features = ["native-tls"] }
url = "2.1"
log = "0.4.11"
indexmap = "1.9.2"

[features]
vendored-tls = ["reqwest/native-tls-vendored", "tungstenite/native-tls-vendored"]

[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"