[package]
name = "bitmex"
version = "0.1.0"
edition = "2018"

[lib]
name = "bitmex"
path = "src/lib.rs"

[dependencies]
actix-rt = "1.1.1"
actix-http = "2.2.0"
http = "0.2.1"
awc = { version="2.0.3", features=["rustls"] }
serde_json = "1.0.60"
serde = { version = "1.0.123", features = ["derive"] }
tungstenite = "0.11.1"
url = "2.2.0"
openssl = { version = "0.10.30", features = ["vendored"] }
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.2"
log = "0.4.11"
env_logger = "0.11.6"
rayon = "1.5.0"
chrono = "0.4.19"
indexmap = { version = "2.7.0", features = ["std"] }
uuid = { version = "1.12.0", features = ["v4"] }
num_cpus = "1.13.0"
log4rs = "1.0.0"
dotenv = "^0.15.0"
futures = "^0.3.0"
rust_decimal = "^1.13.0"
tokio = {version = "^1.21.0", features = ["macros", "rt", "rt-multi-thread"]}