[package]
name = "okex"
version = "0.1.0"
edition = "2021"

[lib]
name = "okex"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.6"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
chrono = "0.4.23"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tungstenite = { version = "0.26.1", features = ["native-tls"] }
url = "2.2.2"
log = "0.4.17"
indexmap = "2.7.0"

[features]
vendored-tls = ["reqwest/native-tls-vendored", "tungstenite/native-tls-vendored"]

[dev-dependencies]
mockito = "1.6.1"
dotenv = "0.15.0"
env_logger = "0.11.0"